background color change

--- a/c2c/public/css/style1.css
+++ b/c2c/public/css/style1.css
@@ -1,5 +1,5 @@
                 html, body {
-                background-color: yellow;
+                background-color:;
                 color: #636b6f;
                 font-family: 'Raleway', sans-serif;
                 font-weight: 100;
@@ -49,14 +49,14 @@
                 margin-bottom: 30px;
             }
             .body-container{
-               
+
             }
 
             /* my body product slide bar*/
             .bod-container{
 
                 position: relative;
-            
+
                 left: 0;
                 right: 0;
                 width: 100%;
@@ -70,7 +70,7 @@
                 top:2px;
                 height: 300px;
             }
-            .flip-container { 
+            .flip-container {
                height:300px;
                 width: 200px;
               position: relative;
@@ -106,7 +106,7 @@
             .flip .front {
                 height:30%;
                 width: 20%;
-             
+
             }
             .flip .back {
                  transform: rotateY( 180deg );
