--- a/c2c/public/css/style2.css
+++ b/c2c/public/css/style2.css
@@ -1,5 +1,5 @@
             html, body {
-                background-color: yellow;
+                
                 color: #636b6f;
                 font-family: 'Raleway', sans-serif;
                 font-weight: 100;
@@ -69,6 +69,7 @@
                 position: relative;
                 top:2px;
                 height: 300px;
+
             }
             .flip-container { 
                height:300px;
@@ -82,10 +83,13 @@
 
 
 
+
             }
             .flip img{
                 width:205px;
                 height: 305px;
+                backface-visibility: hidden;
+
             }
             .flip {
               width: 100%;
@@ -93,6 +97,7 @@
               position: absolute;
               transform-style: preserve-3d;
               transition: transform 1s;
+          
             }
             .flip figure {
               margin: 0;
@@ -100,6 +105,7 @@
               position: absolute;
               width: 100%;
               height: 100%;
+              -webkit-backface-visibility: hidden;
               backface-visibility: hidden;
             }
 
@@ -113,7 +119,7 @@
             }
 
              .flip:hover {
-                  transform: rotateY( 180deg );
+                transform: rotateY( 180deg );
             }
 
                                  
